src/main/java/org/example/utils/error/PizzaException.java
package org.example.utils.error;

public class PizzaException extends RuntimeException {
    public PizzaException(Throwable cause) {
        super(cause);
    }
}
